[tool.poetry]
name = "techblog-lgbm-wsl"
version = "0.1.0"
description = ""
authors = ["Ryoma Kobayashi <ryoma.kobayashi@abejainc.com>"]
readme = "README.md"
packages = [{include = "wsl_w_lgbm"}]

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.0.0"
notebook = "^6.5.4"
lightgbm = "^3.3.5"
pysen = "^0.10.4"
isort = "^5.12.0"
black = "^23.3.0"
flake8 = "^6.0.0"
mypy = "^1.3.0"
torch = "^2.0.1"
torch-vision = "^0.1.6.dev0"
pillow = "^9.5.0"
matplotlib = "^3.7.2"
japanize-matplotlib = "^1.1.3"
polars = "^0.18.13"
seaborn = "^0.12.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pysen]
version = "0.10"

[tool.pysen.lint]
enable_black = true
enable_flake8 = true
enable_isort = true
enable_mypy = true
mypy_preset = "strict"
line_length = 88
py_version = "py37"
[[tool.pysen.lint.mypy_targets]]
  paths = ["."]
